Lab/Code/syntax.output
Grammar

    0 $accept: Program $end

    1 Program: ExtDefList

    2 ExtDefList: %empty
    3           | ExtDef ExtDefList

    4 ExtDef: Specifier ExtDecList SEMI
    5       | Specifier SEMI
    6       | Specifier FunDec CompSt
    7       | Specifier FunDec SEMI
    8       | error SEMI
    9       | error FunDec CompSt

   10 ExtDecList: VarDec
   11           | VarDec COMMA ExtDecList

   12 Specifier: TYPE
   13          | StructSpecifier

   14 StructSpecifier: STRUCT OptTag LC DefList RC
   15                | STRUCT Tag
   16                | STRUCT OptTag LC error RC

   17 OptTag: %empty
   18       | ID

   19 Tag: ID

   20 VarDec: ID
   21       | VarDec LB INT RB
   22       | VarDec LB error RB

   23 FunDec: ID LP VarList RP
   24       | ID LP RP
   25       | error RP

   26 VarList: ParamDec COMMA VarList
   27        | ParamDec

   28 ParamDec: Specifier VarDec

   29 CompSt: LC DefList StmtList RC
   30       | LC DefList error RC

   31 StmtList: %empty
   32         | Stmt StmtList

   33 Stmt: Exp SEMI
   34     | CompSt
   35     | RETURN Exp SEMI
   36     | IF LP Exp RP Stmt
   37     | IF LP Exp RP Stmt ELSE Stmt
   38     | WHILE LP Exp RP Stmt
   39     | error SEMI
   40     | IF LP error RP Stmt
   41     | IF LP error RP Stmt ELSE Stmt
   42     | WHILE LP error RP Stmt

   43 DefList: %empty
   44        | Def DefList

   45 Def: Specifier DecList SEMI
   46    | Specifier error SEMI

   47 DecList: Dec
   48        | Dec COMMA DecList

   49 Dec: VarDec
   50    | VarDec ASSIGNOP Exp
   51    | error ASSIGNOP Exp

   52 Exp: Exp ASSIGNOP Exp
   53    | Exp AND Exp
   54    | Exp OR Exp
   55    | Exp RELOP Exp
   56    | Exp PLUS Exp
   57    | Exp MINUS Exp
   58    | Exp STAR Exp
   59    | Exp DIV Exp
   60    | LP Exp RP
   61    | MINUS Exp
   62    | NOT Exp
   63    | ID LP Args RP
   64    | ID LP RP
   65    | Exp LB Exp RB
   66    | Exp DOT ID
   67    | ID
   68    | INT
   69    | FLOAT
   70    | LP error RP
   71    | LP error SEMI
   72    | LP error RC
   73    | ID LP error RP
   74    | ID LP error SEMI
   75    | ID LP error RC
   76    | Exp LB error RB
   77    | Exp LB error SEMI
   78    | Exp LB error RC

   79 Args: Exp COMMA Args
   80     | Exp


Terminals, with rules where they appear

$end (0) 0
error (256) 8 9 16 22 25 30 39 40 41 42 46 51 70 71 72 73 74 75 76
    77 78
SEMI (258) 4 5 7 8 33 35 39 45 46 71 74 77
COMMA (259) 11 26 48 79
ASSIGNOP (260) 50 51 52
RELOP (261) 55
PLUS (262) 56
MINUS (263) 57 61
STAR (264) 58
DIV (265) 59
AND (266) 53
OR (267) 54
DOT (268) 66
NOT (269) 62
TYPE (270) 12
LP (271) 23 24 36 37 38 40 41 42 60 63 64 70 71 72 73 74 75
RP (272) 23 24 25 36 37 38 40 41 42 60 63 64 70 73
LB (273) 21 22 65 76 77 78
RB (274) 21 22 65 76
LC (275) 14 16 29 30
RC (276) 14 16 29 30 72 75 78
STRUCT (277) 14 15 16
RETURN (278) 35
IF (279) 36 37 40 41
ELSE (280) 37 41
WHILE (281) 38 42
INT (282) 21 68
FLOAT (283) 69
ID (284) 18 19 20 23 24 63 64 66 67 73 74 75
UMINUS (285)
LOWER_THAN_ELSE (286)


Nonterminals, with rules where they appear

$accept (32)
    on left: 0
Program (33)
    on left: 1, on right: 0
ExtDefList (34)
    on left: 2 3, on right: 1 3
ExtDef (35)
    on left: 4 5 6 7 8 9, on right: 3
ExtDecList (36)
    on left: 10 11, on right: 4 11
Specifier (37)
    on left: 12 13, on right: 4 5 6 7 28 45 46
StructSpecifier (38)
    on left: 14 15 16, on right: 13
OptTag (39)
    on left: 17 18, on right: 14 16
Tag (40)
    on left: 19, on right: 15
VarDec (41)
    on left: 20 21 22, on right: 10 11 21 22 28 49 50
FunDec (42)
    on left: 23 24 25, on right: 6 7 9
VarList (43)
    on left: 26 27, on right: 23 26
ParamDec (44)
    on left: 28, on right: 26 27
CompSt (45)
    on left: 29 30, on right: 6 9 34
StmtList (46)
    on left: 31 32, on right: 29 32
Stmt (47)
    on left: 33 34 35 36 37 38 39 40 41 42, on right: 32 36 37 38 40
    41 42
DefList (48)
    on left: 43 44, on right: 14 29 30 44
Def (49)
    on left: 45 46, on right: 44
DecList (50)
    on left: 47 48, on right: 45 48
Dec (51)
    on left: 49 50 51, on right: 47 48
Exp (52)
    on left: 52 53 54 55 56 57 58 59 60 61 62 63 64 65 66 67 68 69
    70 71 72 73 74 75 76 77 78, on right: 33 35 36 37 38 50 51 52 53
    54 55 56 57 58 59 60 61 62 65 66 76 77 78 79 80
Args (53)
    on left: 79 80, on right: 63 79


State 0

    0 $accept: . Program $end

    error   shift, and go to state 1
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    $end  reduce using rule 2 (ExtDefList)

    Program          go to state 4
    ExtDefList       go to state 5
    ExtDef           go to state 6
    Specifier        go to state 7
    StructSpecifier  go to state 8


State 1

    8 ExtDef: error . SEMI
    9       | error . FunDec CompSt

    error  shift, and go to state 9
    SEMI   shift, and go to state 10
    ID     shift, and go to state 11

    FunDec  go to state 12


State 2

   12 Specifier: TYPE .

    $default  reduce using rule 12 (Specifier)


State 3

   14 StructSpecifier: STRUCT . OptTag LC DefList RC
   15                | STRUCT . Tag
   16                | STRUCT . OptTag LC error RC

    ID  shift, and go to state 13

    $default  reduce using rule 17 (OptTag)

    OptTag  go to state 14
    Tag     go to state 15


State 4

    0 $accept: Program . $end

    $end  shift, and go to state 16


State 5

    1 Program: ExtDefList .

    $default  reduce using rule 1 (Program)


State 6

    3 ExtDefList: ExtDef . ExtDefList

    error   shift, and go to state 1
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    $end  reduce using rule 2 (ExtDefList)

    ExtDefList       go to state 17
    ExtDef           go to state 6
    Specifier        go to state 7
    StructSpecifier  go to state 8


State 7

    4 ExtDef: Specifier . ExtDecList SEMI
    5       | Specifier . SEMI
    6       | Specifier . FunDec CompSt
    7       | Specifier . FunDec SEMI

    error  shift, and go to state 9
    SEMI   shift, and go to state 18
    ID     shift, and go to state 19

    ExtDecList  go to state 20
    VarDec      go to state 21
    FunDec      go to state 22


State 8

   13 Specifier: StructSpecifier .

    $default  reduce using rule 13 (Specifier)


State 9

   25 FunDec: error . RP

    RP  shift, and go to state 23


State 10

    8 ExtDef: error SEMI .

    $default  reduce using rule 8 (ExtDef)


State 11

   23 FunDec: ID . LP VarList RP
   24       | ID . LP RP

    LP  shift, and go to state 24


State 12

    9 ExtDef: error FunDec . CompSt

    LC  shift, and go to state 25

    CompSt  go to state 26


State 13

   18 OptTag: ID .
   19 Tag: ID .

    LC        reduce using rule 18 (OptTag)
    $default  reduce using rule 19 (Tag)


State 14

   14 StructSpecifier: STRUCT OptTag . LC DefList RC
   16                | STRUCT OptTag . LC error RC

    LC  shift, and go to state 27


State 15

   15 StructSpecifier: STRUCT Tag .

    $default  reduce using rule 15 (StructSpecifier)


State 16

    0 $accept: Program $end .

    $default  accept


State 17

    3 ExtDefList: ExtDef ExtDefList .

    $default  reduce using rule 3 (ExtDefList)


State 18

    5 ExtDef: Specifier SEMI .

    $default  reduce using rule 5 (ExtDef)


State 19

   20 VarDec: ID .
   23 FunDec: ID . LP VarList RP
   24       | ID . LP RP

    LP  shift, and go to state 24

    $default  reduce using rule 20 (VarDec)


State 20

    4 ExtDef: Specifier ExtDecList . SEMI

    SEMI  shift, and go to state 28


State 21

   10 ExtDecList: VarDec .
   11           | VarDec . COMMA ExtDecList
   21 VarDec: VarDec . LB INT RB
   22       | VarDec . LB error RB

    COMMA  shift, and go to state 29
    LB     shift, and go to state 30

    $default  reduce using rule 10 (ExtDecList)


State 22

    6 ExtDef: Specifier FunDec . CompSt
    7       | Specifier FunDec . SEMI

    SEMI  shift, and go to state 31
    LC    shift, and go to state 25

    CompSt  go to state 32


State 23

   25 FunDec: error RP .

    $default  reduce using rule 25 (FunDec)


State 24

   23 FunDec: ID LP . VarList RP
   24       | ID LP . RP

    TYPE    shift, and go to state 2
    RP      shift, and go to state 33
    STRUCT  shift, and go to state 3

    Specifier        go to state 34
    StructSpecifier  go to state 8
    VarList          go to state 35
    ParamDec         go to state 36


State 25

   29 CompSt: LC . DefList StmtList RC
   30       | LC . DefList error RC

    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    $default  reduce using rule 43 (DefList)

    Specifier        go to state 37
    StructSpecifier  go to state 8
    DefList          go to state 38
    Def              go to state 39


State 26

    9 ExtDef: error FunDec CompSt .

    $default  reduce using rule 9 (ExtDef)


State 27

   14 StructSpecifier: STRUCT OptTag LC . DefList RC
   16                | STRUCT OptTag LC . error RC

    error   shift, and go to state 40
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    RC  reduce using rule 43 (DefList)

    Specifier        go to state 37
    StructSpecifier  go to state 8
    DefList          go to state 41
    Def              go to state 39


State 28

    4 ExtDef: Specifier ExtDecList SEMI .

    $default  reduce using rule 4 (ExtDef)


State 29

   11 ExtDecList: VarDec COMMA . ExtDecList

    ID  shift, and go to state 42

    ExtDecList  go to state 43
    VarDec      go to state 21


State 30

   21 VarDec: VarDec LB . INT RB
   22       | VarDec LB . error RB

    error  shift, and go to state 44
    INT    shift, and go to state 45


State 31

    7 ExtDef: Specifier FunDec SEMI .

    $default  reduce using rule 7 (ExtDef)


State 32

    6 ExtDef: Specifier FunDec CompSt .

    $default  reduce using rule 6 (ExtDef)


State 33

   24 FunDec: ID LP RP .

    $default  reduce using rule 24 (FunDec)


State 34

   28 ParamDec: Specifier . VarDec

    ID  shift, and go to state 42

    VarDec  go to state 46


State 35

   23 FunDec: ID LP VarList . RP

    RP  shift, and go to state 47


State 36

   26 VarList: ParamDec . COMMA VarList
   27        | ParamDec .

    COMMA  shift, and go to state 48

    $default  reduce using rule 27 (VarList)


State 37

   45 Def: Specifier . DecList SEMI
   46    | Specifier . error SEMI

    error  shift, and go to state 49
    ID     shift, and go to state 42

    VarDec   go to state 50
    DecList  go to state 51
    Dec      go to state 52


State 38

   29 CompSt: LC DefList . StmtList RC
   30       | LC DefList . error RC

    error   shift, and go to state 53
    MINUS   shift, and go to state 54
    NOT     shift, and go to state 55
    LP      shift, and go to state 56
    LC      shift, and go to state 25
    RETURN  shift, and go to state 57
    IF      shift, and go to state 58
    WHILE   shift, and go to state 59
    INT     shift, and go to state 60
    FLOAT   shift, and go to state 61
    ID      shift, and go to state 62

    RC  reduce using rule 31 (StmtList)

    CompSt    go to state 63
    StmtList  go to state 64
    Stmt      go to state 65
    Exp       go to state 66


State 39

   44 DefList: Def . DefList

    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    $default  reduce using rule 43 (DefList)

    Specifier        go to state 37
    StructSpecifier  go to state 8
    DefList          go to state 67
    Def              go to state 39


State 40

   16 StructSpecifier: STRUCT OptTag LC error . RC

    RC  shift, and go to state 68


State 41

   14 StructSpecifier: STRUCT OptTag LC DefList . RC

    RC  shift, and go to state 69


State 42

   20 VarDec: ID .

    $default  reduce using rule 20 (VarDec)


State 43

   11 ExtDecList: VarDec COMMA ExtDecList .

    $default  reduce using rule 11 (ExtDecList)


State 44

   22 VarDec: VarDec LB error . RB

    RB  shift, and go to state 70


State 45

   21 VarDec: VarDec LB INT . RB

    RB  shift, and go to state 71


State 46

   21 VarDec: VarDec . LB INT RB
   22       | VarDec . LB error RB
   28 ParamDec: Specifier VarDec .

    LB  shift, and go to state 30

    $default  reduce using rule 28 (ParamDec)


State 47

   23 FunDec: ID LP VarList RP .

    $default  reduce using rule 23 (FunDec)


State 48

   26 VarList: ParamDec COMMA . VarList

    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    Specifier        go to state 34
    StructSpecifier  go to state 8
    VarList          go to state 72
    ParamDec         go to state 36


State 49

   46 Def: Specifier error . SEMI
   51 Dec: error . ASSIGNOP Exp

    SEMI      shift, and go to state 73
    ASSIGNOP  shift, and go to state 74


State 50

   21 VarDec: VarDec . LB INT RB
   22       | VarDec . LB error RB
   49 Dec: VarDec .
   50    | VarDec . ASSIGNOP Exp

    ASSIGNOP  shift, and go to state 75
    LB        shift, and go to state 30

    $default  reduce using rule 49 (Dec)


State 51

   45 Def: Specifier DecList . SEMI

    SEMI  shift, and go to state 76


State 52

   47 DecList: Dec .
   48        | Dec . COMMA DecList

    COMMA  shift, and go to state 77

    $default  reduce using rule 47 (DecList)


State 53

   30 CompSt: LC DefList error . RC
   39 Stmt: error . SEMI

    SEMI  shift, and go to state 78
    RC    shift, and go to state 79


State 54

   61 Exp: MINUS . Exp

    MINUS  shift, and go to state 54
    NOT    shift, and go to state 55
    LP     shift, and go to state 56
    INT    shift, and go to state 60
    FLOAT  shift, and go to state 61
    ID     shift, and go to state 62

    Exp  go to state 80


State 55

   62 Exp: NOT . Exp

    MINUS  shift, and go to state 54
    NOT    shift, and go to state 55
    LP     shift, and go to state 56
    INT    shift, and go to state 60
    FLOAT  shift, and go to state 61
    ID     shift, and go to state 62

    Exp  go to state 81


State 56

   60 Exp: LP . Exp RP
   70    | LP . error RP
   71    | LP . error SEMI
   72    | LP . error RC

    error  shift, and go to state 82
    MINUS  shift, and go to state 54
    NOT    shift, and go to state 55
    LP     shift, and go to state 56
    INT    shift, and go to state 60
    FLOAT  shift, and go to state 61
    ID     shift, and go to state 62

    Exp  go to state 83


State 57

   35 Stmt: RETURN . Exp SEMI

    MINUS  shift, and go to state 54
    NOT    shift, and go to state 55
    LP     shift, and go to state 56
    INT    shift, and go to state 60
    FLOAT  shift, and go to state 61
    ID     shift, and go to state 62

    Exp  go to state 84


State 58

   36 Stmt: IF . LP Exp RP Stmt
   37     | IF . LP Exp RP Stmt ELSE Stmt
   40     | IF . LP error RP Stmt
   41     | IF . LP error RP Stmt ELSE Stmt

    LP  shift, and go to state 85


State 59

   38 Stmt: WHILE . LP Exp RP Stmt
   42     | WHILE . LP error RP Stmt

    LP  shift, and go to state 86


State 60

   68 Exp: INT .

    $default  reduce using rule 68 (Exp)


State 61

   69 Exp: FLOAT .

    $default  reduce using rule 69 (Exp)


State 62

   63 Exp: ID . LP Args RP
   64    | ID . LP RP
   67    | ID .
   73    | ID . LP error RP
   74    | ID . LP error SEMI
   75    | ID . LP error RC

    LP  shift, and go to state 87

    $default  reduce using rule 67 (Exp)


State 63

   34 Stmt: CompSt .

    $default  reduce using rule 34 (Stmt)


State 64

   29 CompSt: LC DefList StmtList . RC

    RC  shift, and go to state 88


State 65

   32 StmtList: Stmt . StmtList

    error   shift, and go to state 89
    MINUS   shift, and go to state 54
    NOT     shift, and go to state 55
    LP      shift, and go to state 56
    LC      shift, and go to state 25
    RETURN  shift, and go to state 57
    IF      shift, and go to state 58
    WHILE   shift, and go to state 59
    INT     shift, and go to state 60
    FLOAT   shift, and go to state 61
    ID      shift, and go to state 62

    RC  reduce using rule 31 (StmtList)

    CompSt    go to state 63
    StmtList  go to state 90
    Stmt      go to state 65
    Exp       go to state 66


State 66

   33 Stmt: Exp . SEMI
   52 Exp: Exp . ASSIGNOP Exp
   53    | Exp . AND Exp
   54    | Exp . OR Exp
   55    | Exp . RELOP Exp
   56    | Exp . PLUS Exp
   57    | Exp . MINUS Exp
   58    | Exp . STAR Exp
   59    | Exp . DIV Exp
   65    | Exp . LB Exp RB
   66    | Exp . DOT ID
   76    | Exp . LB error RB
   77    | Exp . LB error SEMI
   78    | Exp . LB error RC

    SEMI      shift, and go to state 91
    ASSIGNOP  shift, and go to state 92
    RELOP     shift, and go to state 93
    PLUS      shift, and go to state 94
    MINUS     shift, and go to state 95
    STAR      shift, and go to state 96
    DIV       shift, and go to state 97
    AND       shift, and go to state 98
    OR        shift, and go to state 99
    DOT       shift, and go to state 100
    LB        shift, and go to state 101


State 67

   44 DefList: Def DefList .

    $default  reduce using rule 44 (DefList)


State 68

   16 StructSpecifier: STRUCT OptTag LC error RC .

    $default  reduce using rule 16 (StructSpecifier)


State 69

   14 StructSpecifier: STRUCT OptTag LC DefList RC .

    $default  reduce using rule 14 (StructSpecifier)


State 70

   22 VarDec: VarDec LB error RB .

    $default  reduce using rule 22 (VarDec)


State 71

   21 VarDec: VarDec LB INT RB .

    $default  reduce using rule 21 (VarDec)


State 72

   26 VarList: ParamDec COMMA VarList .

    $default  reduce using rule 26 (VarList)


State 73

   46 Def: Specifier error SEMI .

    $default  reduce using rule 46 (Def)


State 74

   51 Dec: error ASSIGNOP . Exp

    MINUS  shift, and go to state 54
    NOT    shift, and go to state 55
    LP     shift, and go to state 56
    INT    shift, and go to state 60
    FLOAT  shift, and go to state 61
    ID     shift, and go to state 62

    Exp  go to state 102


State 75

   50 Dec: VarDec ASSIGNOP . Exp

    MINUS  shift, and go to state 54
    NOT    shift, and go to state 55
    LP     shift, and go to state 56
    INT    shift, and go to state 60
    FLOAT  shift, and go to state 61
    ID     shift, and go to state 62

    Exp  go to state 103


State 76

   45 Def: Specifier DecList SEMI .

    $default  reduce using rule 45 (Def)


State 77

   48 DecList: Dec COMMA . DecList

    error  shift, and go to state 104
    ID     shift, and go to state 42

    VarDec   go to state 50
    DecList  go to state 105
    Dec      go to state 52


State 78

   39 Stmt: error SEMI .

    $default  reduce using rule 39 (Stmt)


State 79

   30 CompSt: LC DefList error RC .

    $default  reduce using rule 30 (CompSt)


State 80

   52 Exp: Exp . ASSIGNOP Exp
   53    | Exp . AND Exp
   54    | Exp . OR Exp
   55    | Exp . RELOP Exp
   56    | Exp . PLUS Exp
   57    | Exp . MINUS Exp
   58    | Exp . STAR Exp
   59    | Exp . DIV Exp
   61    | MINUS Exp .
   65    | Exp . LB Exp RB
   66    | Exp . DOT ID
   76    | Exp . LB error RB
   77    | Exp . LB error SEMI
   78    | Exp . LB error RC

    DOT  shift, and go to state 100
    LB   shift, and go to state 101

    $default  reduce using rule 61 (Exp)


State 81

   52 Exp: Exp . ASSIGNOP Exp
   53    | Exp . AND Exp
   54    | Exp . OR Exp
   55    | Exp . RELOP Exp
   56    | Exp . PLUS Exp
   57    | Exp . MINUS Exp
   58    | Exp . STAR Exp
   59    | Exp . DIV Exp
   62    | NOT Exp .
   65    | Exp . LB Exp RB
   66    | Exp . DOT ID
   76    | Exp . LB error RB
   77    | Exp . LB error SEMI
   78    | Exp . LB error RC

    DOT  shift, and go to state 100
    LB   shift, and go to state 101

    $default  reduce using rule 62 (Exp)


State 82

   70 Exp: LP error . RP
   71    | LP error . SEMI
   72    | LP error . RC

    SEMI  shift, and go to state 106
    RP    shift, and go to state 107
    RC    shift, and go to state 108


State 83

   52 Exp: Exp . ASSIGNOP Exp
   53    | Exp . AND Exp
   54    | Exp . OR Exp
   55    | Exp . RELOP Exp
   56    | Exp . PLUS Exp
   57    | Exp . MINUS Exp
   58    | Exp . STAR Exp
   59    | Exp . DIV Exp
   60    | LP Exp . RP
   65    | Exp . LB Exp RB
   66    | Exp . DOT ID
   76    | Exp . LB error RB
   77    | Exp . LB error SEMI
   78    | Exp . LB error RC

    ASSIGNOP  shift, and go to state 92
    RELOP     shift, and go to state 93
    PLUS      shift, and go to state 94
    MINUS     shift, and go to state 95
    STAR      shift, and go to state 96
    DIV       shift, and go to state 97
    AND       shift, and go to state 98
    OR        shift, and go to state 99
    DOT       shift, and go to state 100
    RP        shift, and go to state 109
    LB        shift, and go to state 101


State 84

   35 Stmt: RETURN Exp . SEMI
   52 Exp: Exp . ASSIGNOP Exp
   53    | Exp . AND Exp
   54    | Exp . OR Exp
   55    | Exp . RELOP Exp
   56    | Exp . PLUS Exp
   57    | Exp . MINUS Exp
   58    | Exp . STAR Exp
   59    | Exp . DIV Exp
   65    | Exp . LB Exp RB
   66    | Exp . DOT ID
   76    | Exp . LB error RB
   77    | Exp . LB error SEMI
   78    | Exp . LB error RC

    SEMI      shift, and go to state 110
    ASSIGNOP  shift, and go to state 92
    RELOP     shift, and go to state 93
    PLUS      shift, and go to state 94
    MINUS     shift, and go to state 95
    STAR      shift, and go to state 96
    DIV       shift, and go to state 97
    AND       shift, and go to state 98
    OR        shift, and go to state 99
    DOT       shift, and go to state 100
    LB        shift, and go to state 101


State 85
